--- a/index.html
+++ b/index.html
@@ -7,29 +7,43 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="body">
-
-        <div class="header-background">
-            <div class="header"></div>
-            <div class="hero"></div>
+    <div class="header">
+        <div class="header-logo-text">Monster Hunter Rise: Team Cart Side</div>
+        <div class="Header-link">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
+    </div>
+    <div class="hero-background">  
+        <div class="hero">
+            <div class="hero-right">
+                <img src="Logo-MHRise_Sunbreak.png" alt="This is Image Content">
+            </div>
+            <div class="hero-left">
+                <div class="header-hero"><img src="sample.webp" alt=""></div>
+                <div class="header-content">Welcome to Team Cart Side page! Join us in exciting adventure in the massive expansion of Monster Hunter Rise: Sunbreak. We will face together the epic new brought monster in the series and experienced the beauty of Elgado outpost.</div>
+                <div>
+                    <button class="sign-up">Join now!   </button>
+                </div>
+            </div> 
+        </div>    
+    </div>
 
-        <div class="information-background">
+
+        <div class="information-background  content">
             <div class="information"></div>
         </div>
-
-        <div class="quote-background">
+        <div class="quote-background  content">
             <div class="quote"></div>
         </div>
-
-        <div class="bottom-signup-background">
+        <div class="bottom-signup-background  content">
             <div class="bottom-signup"></div>
         </div>
-
-        <div class="footer-background">
+        <div class="footer-background  content">
             <div class="footer"></div>
         </div>
-
-    </div>
 </body>
-</html>
+</html> 
