ADD Images with subtext information

--- a/index.html
+++ b/index.html
@@ -31,19 +31,48 @@
             </div> 
         </div>    
     </div>
-
-
-        <div class="information-background  content">
-            <div class="information"></div>
+    <div class="information-background  content">
+        <div class="header-information">
+            Meet The Three Lords!
         </div>
-        <div class="quote-background  content">
-            <div class="quote"></div>
+        <div class="content-info">
+            <div class="info">
+                <div class="info-img"><a href="Malzeno.png">
+                    <img src="Malzeno.png" alt="Malzeno"></a>
+                </div>
+                <div class="info-subtext">
+                    <p><span>Malzeno</span><br>
+                    An elder dragon covered with elegant silver scales. It drains the life energy of other living creatures, creeping around at night and attacking its prey from behind. Though Malzeno appears regal at a glance, it takes on a more sinister appearance after draining enough energy.</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="info-img"><a href="lunagaron.png">
+                    <img src="lunagaron.png" alt=""></a>
+                </div>
+                <div class="info-subtext">
+                    <p><span>Lunagaron</span><br>
+                        An azure-colored Fanged Wyvern with an organ that chills the air it inhales, which then circulates throughout its body in a unique form of thermoregulation. It can travel long distances and endure significant environmental changes, allowing them to occupy a wide range of habitats.</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="info-img"><a href="garangolm.png">
+                    <img src="garangolm.png" alt=""></a>
+                </div>
+                <div class="info-subtext">
+                    <p><span>Garangolm</span><br>
+                        A monster characterized by its massive and rigid body. Their sap-like fluids can promote plant growth, forging a symbiotic relationship with flora that grows in their bodies. They can also use that sap to harden plants or the surrounding soil, outfitting their bodies and enhancing their attacks.</p>
+                </div>
+            </div>
         </div>
-        <div class="bottom-signup-background  content">
-            <div class="bottom-signup"></div>
-        </div>
-        <div class="footer-background  content">
-            <div class="footer"></div>
-        </div>
+    </div>
+    <div class="quote-background  content">
+        <div class="quote"></div>
+    </div>
+    <div class="bottom-signup-background  content">
+        <div class="bottom-signup"></div>
+    </div>
+    <div class="footer-background  content">
+        <div class="footer"></div>
+    </div>
 </body>
 </html> 
