EDIT header logo and ADD new content in quote section

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <!--Header-->
     <div class="header">
-        <div class="header-logo-text">Monster Hunter Rise: Team Cart Side</div>
+        <div class="header-logo-text"><img class="cart" src="cart.png" alt=""></div>
         <div class="Header-link">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#information-section">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </div>
+    <!--Hero-->
     <div class="hero-background">  
         <div class="hero">
             <div class="hero-right">
@@ -26,14 +28,15 @@
                 <div class="header-hero"><img src="sample.webp" alt=""></div>
                 <div class="header-content">Welcome to Team Cart Side page! Join us in exciting adventure in the massive expansion of Monster Hunter Rise: Sunbreak. We will face together the epic new brought monster in the series and experienced the beauty of Elgado outpost.</div>
                 <div>
-                    <button class="sign-up">Join now!   </button>
+                    <button class="sign-up">Join now!</button>
                 </div>
             </div> 
         </div>    
     </div>
+    <!--Information-->
     <div class="information-background  content">
         <div class="header-information">
-            Meet The Three Lords!
+            <p id="information-section">Meet The Three Lords!</p>
         </div>
         <div class="content-info">
             <div class="info">
@@ -65,8 +68,12 @@
             </div>
         </div>
     </div>
+    <!--Quote-->
     <div class="quote-background  content">
-        <div class="quote"></div>
+        <div class="quote">
+            <p>"A cave of crimson, flames billowing high, that is where he makes his nest, best to not go nigh, fire scorching the earth, rains down from the sky, when his highness sets his eyes on you, it's time to say goodbye."</p>
+            <p><Span class="sign">-Rathalos, King of the Skies.</Span></p>
+        </div>
     </div>
     <div class="bottom-signup-background  content">
         <div class="bottom-signup"></div>
