ADD quote and footer details

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <div class="header-logo-text"><img class="cart" src="cart.png" alt=""></div>
         <div class="Header-link">
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#information-section">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -28,7 +27,7 @@
                 <div class="header-hero"><img src="sample.webp" alt=""></div>
                 <div class="header-content">Welcome to Team Cart Side page! Join us in exciting adventure in the massive expansion of Monster Hunter Rise: Sunbreak. We will face together the epic new brought monster in the series and experienced the beauty of Elgado outpost.</div>
                 <div>
-                    <button class="sign-up">Join now!</button>
+                    <button class="sign-up"><a href="#">Join us!</a></button>
                 </div>
             </div> 
         </div>    
@@ -76,10 +75,20 @@
         </div>
     </div>
     <div class="bottom-signup-background  content">
-        <div class="bottom-signup"></div>
+        <div class="bottom-signup" id="sign-up">
+            <div id="contact">
+                <span class="signup-header">Call to Action! It's time!</span><br>
+                <span class="header-content">Join us by clicking that button right over there!</span>
+            </div>
+            <div>
+                <button class="sign-up" id="bottom"><a href="#">Join us!</a></button>
+            </div>
+        </div>
     </div>
     <div class="footer-background  content">
-        <div class="footer"></div>
+        <div class="footer">
+            Copyright &copy; The Odin Project 2022
+        </div>
     </div>
 </body>
 </html> 
